start, stop and reset buttons have been add

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <h1 id="counter">0</h1>
 
+    <div class="btn-container">
+        <button id="btnStart">Start</button>
+        <button id="btnStop">Stop</button>
+        <button id="btnReset">Reset</button>
+    </div>
+
     <script src="script.js">
 
     </script>
